help: fix TOC links
* Fixes links in table of contents by adding a `base href` tag into the page.
* Decreases z-index of TOC to make it appear below the user's dropdown menu.
* Closes #450.

--- a/sonar/theme/assets/scss/common/_theme.scss
+++ b/sonar/theme/assets/scss/common/_theme.scss
@@ -33,3 +33,8 @@
     display: none;
   }
 }
+
+// Avoid dropdown menu to appear under the wiki TOC.
+div.wiki-page div.sticky-top {
+  z-index: 900;
+}
